// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should test TodoFilter component snapshot 1`] = `
<div
  className="todoFilter"
>
  <form>
    Todo List(undefined)
    <input
      onChange={[Function]}
      type="checkbox"
    />
  </form>
</div>
`;

exports[`should test TodoFilter component snapshot with todoCount 1`] = `
<div
  className="todoFilter"
>
  <form>
    Todo List(4)
    <input
      onChange={[Function]}
      type="checkbox"
    />
  </form>
</div>
`;

exports[`should test TodoFilter component snapshot with todoCount and hideCompleted 1`] = `
<div
  className="todoFilter"
>
  <form>
    Todo List(4)
    <input
      checked={true}
      onChange={[Function]}
      type="checkbox"
    />
  </form>
</div>
`;
